# shittydb

./: .gitignore  .npmignore  LICENSE  README.md  package.json  shittydb.gemspec  shittydb.js  shittydb.py
c/: CMakeLists.txt  shittydb.c  shittydb.h  tester.c
java/: .gitignore  compile.bat  foo  server.bat  server.java  shittydb.java  test.java
nodejs/: test.js
php/: ShittyDB.php  test.php
python/: shittydb.py  test.py
ruby/: shittydb.gemspec  shittydb.rb
vb/: ShittyDB.vb  Test.vb
